Split the Lotka-Volterra notebook

--- a/code/notebooks/lotka_volterra/Stein_thinning.ipynb
+++ b/code/notebooks/lotka_volterra/Stein_thinning.ipynb
@@ -34,21 +34,11 @@
     "import scipy.stats as stats\n",
     "from scipy.stats import multivariate_normal as mvn\n",
     "\n",
-    "import arviz as az\n",
-    "\n",
-    "import stan\n",
-    "\n",
-    "from jax import jacobian\n",
-    "from jax.experimental.ode import odeint\n",
-    "import jax.numpy as jnp\n",
-    "\n",
     "from dask.distributed import Client\n",
     "\n",
-    "import dcor\n",
+    "from stein_thinning.thinning import thin\n",
     "\n",
-    "from stein_thinning.thinning import thin, thin_gf\n",
-    "\n",
-    "from mcmc import sample_chain, metropolis_random_walk_step, rw_proposal_sampler\n",
+    "import lotka_volterra\n",
     "import utils.caching\n",
     "from utils.caching import cached, cached_batch, subscriptable\n",
     "from utils.ksd import calculate_ksd\n",
@@ -140,7 +130,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-a9c24bfe-6a14-11ef-8eaf-94de80e86035</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-0e211c34-6a29-11ef-aecc-94de80e86035</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -171,7 +161,7 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">ff89dc6c</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">2d4dfc08</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
@@ -208,11 +198,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-4542a580-0369-4752-9d05-17fc35ce3c5f</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-048ecd88-b957-4573-9dfa-b15780ede34f</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:42939\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:39621\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 4\n",
@@ -254,7 +244,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:33581\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:36899\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -262,7 +252,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:44487/status\" target=\"_blank\">http://127.0.0.1:44487/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36507/status\" target=\"_blank\">http://127.0.0.1:36507/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -270,13 +260,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:37103\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:34751\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-tvcbbldk\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-9madmnx7\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -299,7 +289,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:44681\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:40427\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -307,7 +297,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:40255/status\" target=\"_blank\">http://127.0.0.1:40255/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:40613/status\" target=\"_blank\">http://127.0.0.1:40613/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -315,13 +305,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:38911\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:46519\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-eq0hj03l\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-21ny2g4p\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -344,7 +334,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:33383\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:34561\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -352,7 +342,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:35213/status\" target=\"_blank\">http://127.0.0.1:35213/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36327/status\" target=\"_blank\">http://127.0.0.1:36327/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -360,13 +350,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44915\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:36619\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-9wi_4byw\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-vhn6qmcm\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -389,7 +379,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:41909\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:36051\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -397,7 +387,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:45841/status\" target=\"_blank\">http://127.0.0.1:45841/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:40585/status\" target=\"_blank\">http://127.0.0.1:40585/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -405,13 +395,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:41099\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44853\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-no7l79p0\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-lbklkxqi\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -438,7 +428,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:42939' processes=4 threads=16, memory=7.45 GiB>"
+       "<Client: 'tcp://127.0.0.1:39621' processes=4 threads=16, memory=7.45 GiB>"
       ]
      },
      "execution_count": 8,
@@ -462,48 +452,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8ef626fe-d729-40a4-85c3-d550da862723",
-   "metadata": {},
-   "source": [
-    "Input parameters:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "21098144-da55-4477-a151-248ea0ac6039",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: make this a cached dataset\n",
-    "theta_inits = [\n",
-    "    np.array([0.55, 1, 0.8, 0.8]),\n",
-    "    np.array([1.5, 1., 0.8, 0.8]),\n",
-    "    np.array([1.3, 1.33, 0.5, 0.8]),\n",
-    "    np.array([0.55, 3., 3., 0.8]),\n",
-    "    np.array([0.55, 1., 1.5, 1.5]),\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "57eddbe1-97f5-4b70-9769-6e35b6ec9a20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_chains = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e5b77bee-1dfd-4dfd-878b-080477ff624d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = 4"
+    "n_chains = len(lotka_volterra.theta_inits)"
    ]
   },
   {
@@ -516,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "01418b20-ba37-4dea-9cc3-3ac40eaf414b",
    "metadata": {},
    "outputs": [],
@@ -529,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "734ec73d-990c-455e-85f9-7c767461c6ef",
    "metadata": {},
    "outputs": [],
@@ -542,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "ef6646f4-da5a-4eff-9639-9ca5e300f64e",
    "metadata": {},
    "outputs": [],
@@ -555,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "b80131e3-8d27-49b3-8c5d-f5b7944859b2",
    "metadata": {},
    "outputs": [],
@@ -584,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "4ea9c749-5d36-4f05-85cb-95a230caaf80",
    "metadata": {},
    "outputs": [],
@@ -596,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "9a8f0a1c",
    "metadata": {},
    "outputs": [],
@@ -622,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "7f92f0a1",
    "metadata": {},
    "outputs": [
@@ -630,8 +585,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6 μs, sys: 0 ns, total: 6 μs\n",
-      "Wall time: 11 μs\n"
+      "CPU times: user 0 ns, sys: 5 μs, total: 5 μs\n",
+      "Wall time: 9.54 μs\n"
      ]
     }
    ],
@@ -658,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "678ffc26-347c-46b6-86cb-2c777f5abb46",
    "metadata": {},
    "outputs": [],
@@ -684,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "c6c3b5a3-388f-4722-ac6e-563493924cbd",
    "metadata": {},
    "outputs": [
@@ -692,8 +647,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6 μs, sys: 0 ns, total: 6 μs\n",
-      "Wall time: 10.7 μs\n"
+      "CPU times: user 3 μs, sys: 1 μs, total: 4 μs\n",
+      "Wall time: 7.87 μs\n"
      ]
     }
    ],
@@ -712,18 +667,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "2b1ed40e-4354-4841-bf88-e5a7618b6f43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles = [f'$\\\\theta^{{(0)}} = ({theta[0]}, {theta[1]}, {theta[2]}, {theta[3]})$' for theta in theta_inits]\n",
-    "var_labels = [f'$\\\\log \\\\theta_{i + 1}$' for i in range(d)]"
+    "titles = [f'$\\\\theta^{{(0)}} = ({theta[0]}, {theta[1]}, {theta[2]}, {theta[3]})$' for theta in lotka_volterra.theta_inits]\n",
+    "var_labels = [f'$\\\\log \\\\theta_{i + 1}$' for i in range(lotka_volterra.d)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "f35a759b-351c-4a3a-af7b-7e34a9c02c4d",
    "metadata": {},
    "outputs": [
@@ -780,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "ae764f9c-cf68-4208-88d8-8bde72736fce",
    "metadata": {},
    "outputs": [],
@@ -793,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "e8d85639-dda2-4927-a4de-ba8c18ef5a57",
    "metadata": {},
    "outputs": [
@@ -841,17 +796,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "1d19f128-8f5f-4036-83ba-7814f1cd86a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39.53834295272827"
+       "45.10659337043762"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
