Move Gaussian mixture notebook to a separate directory

--- a/code/notebooks/gaussian_mixture/Gaussian_mixture.ipynb
+++ b/code/notebooks/gaussian_mixture/Gaussian_mixture.ipynb
@@ -31,17 +31,8 @@
     "\n",
     "from utils.ksd import calculate_ksd\n",
     "from utils.mvn import make_mvn_mixture\n",
+    "from utils.paths import FIGURES_PATH, GENERATED_DATA_PATH\n",
     "from utils.plotting import centered_subplots, highlight_points, plot_density"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6636c3db-46e3-4ba4-8610-dcec5a30cb1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "figures_path = Path('../report') / 'figures'"
    ]
   },
   {
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fbde6e8c-aed6-46f6-8a87-6f7542625888",
    "metadata": {},
    "outputs": [],
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "488342f7-989a-449c-abf4-dc3664b23ba1",
    "metadata": {},
    "outputs": [],
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "70197f63-c8d9-41c2-976a-1afbc32f5f33",
    "metadata": {},
    "outputs": [],
@@ -135,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2a4844af-f0b9-46bb-9c69-87b71aaa3b0c",
    "metadata": {},
    "outputs": [],
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cea33e9d-2b05-4877-8dff-13f85d49a415",
    "metadata": {},
    "outputs": [],
@@ -163,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4159da93-85eb-4e9c-94a5-5c4aacbbee1e",
    "metadata": {},
    "outputs": [
@@ -193,7 +184,7 @@
     "axs[1].set_xlabel('$x_1$');\n",
     "axs[1].set_ylabel('$x_2$');\n",
     "\n",
-    "fig.savefig(figures_path / 'gaussian-mixture-sample.pdf');"
+    "fig.savefig(FIGURES_PATH / 'gaussian-mixture-sample.pdf');"
    ]
   },
   {
@@ -206,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4c9e6e76-671f-4148-8b4b-350ca45a5d61",
    "metadata": {},
    "outputs": [],
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d27391c9-04af-4722-be75-2e23c124e022",
    "metadata": {},
    "outputs": [],
@@ -234,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c38ef0f5-ae4d-4c59-a1e7-e8765a8ad47f",
    "metadata": {},
    "outputs": [],
@@ -245,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "989644ea-3ff2-4c0e-8c4d-090e003c3d36",
    "metadata": {},
    "outputs": [],
@@ -271,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d3647602-5653-41b8-a4bc-b1d87f22e7b6",
    "metadata": {},
    "outputs": [],
@@ -298,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b70a0b6d-6998-404e-8612-c7d7b7929148",
    "metadata": {},
    "outputs": [],
@@ -309,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "370f91ac-c78e-48ca-a6f2-fa4eb68eaf9f",
    "metadata": {},
    "outputs": [],
@@ -335,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f23ee1b6-f0c6-43f2-bf62-cf50d2346d24",
    "metadata": {},
    "outputs": [],
@@ -361,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "71518e6f-1774-41db-95e1-999f7b11782e",
    "metadata": {},
    "outputs": [],
@@ -380,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "a4f0ba8a-e3e7-4bd1-8c3b-cf7c3920249d",
    "metadata": {},
    "outputs": [],
@@ -391,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "821ddda6-3041-4cc2-b1df-4b14809dcd0f",
    "metadata": {},
    "outputs": [
@@ -401,7 +392,7 @@
        "array([0.37127232, 0.35813142])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "a2e21e25-2476-47cb-823a-383f361ca498",
    "metadata": {},
    "outputs": [
@@ -423,7 +414,7 @@
        "       [0.00893545, 2.16606407]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "4a82e999-0588-4697-a45a-752fab7d1d3a",
    "metadata": {},
    "outputs": [],
@@ -461,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "618febdb-cdbf-478b-a3be-9dac752551bd",
    "metadata": {},
    "outputs": [],
@@ -487,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "7fa015f2-2c65-4c6b-b715-5fd8459c9bba",
    "metadata": {},
    "outputs": [],
@@ -505,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "22edd94f-83ea-4dc5-9574-6f9d4d5c55e4",
    "metadata": {},
    "outputs": [
@@ -536,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "155eb5bd-3e0d-4aec-93af-cca0a421ad56",
    "metadata": {},
    "outputs": [],
@@ -550,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "0d437f2d-8955-4760-b6fa-2b9a1d132a3c",
    "metadata": {},
    "outputs": [],
@@ -560,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "a6518d8d-fa47-49d9-bf92-75d1c6f0012a",
    "metadata": {},
    "outputs": [],
@@ -586,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "fb863cf6-41ac-40b1-a84b-14d07c1d7851",
    "metadata": {},
    "outputs": [],
@@ -606,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "b4bc9e09-864d-4658-b331-4538a03549b6",
    "metadata": {},
    "outputs": [
@@ -629,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "d532f334-8038-433b-a7d6-0b8244d4bb4b",
    "metadata": {},
    "outputs": [],
@@ -647,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "92d0d9ca-8c23-48db-9081-00454eab8af7",
    "metadata": {},
    "outputs": [],
@@ -660,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "c2df7cc0-d906-48c2-bd24-2f2f12166fc2",
    "metadata": {},
    "outputs": [],
@@ -670,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "f4bd7aeb-06ab-443f-b75c-3270966bf688",
    "metadata": {},
    "outputs": [
@@ -680,7 +671,7 @@
        "array([0.96124667, 1.02187361])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "a4ed6f57-7ab1-40a1-b211-1e6be2e52c4c",
    "metadata": {},
    "outputs": [
@@ -702,7 +693,7 @@
        "       [-1.3359801 ,  1.43121009]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "54edf41e-96fe-45ed-bb38-3f28eff4140b",
    "metadata": {},
    "outputs": [
@@ -737,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "eb1c17cc-e596-447e-8487-cae578da4f7e",
    "metadata": {},
    "outputs": [],
@@ -748,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "59a7f913-1afa-46de-85bc-20dcf050d70f",
    "metadata": {},
    "outputs": [
@@ -756,7 +747,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/artem/git/stein_thinning/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "/home/artem/git/stein_thinning/stein_thinning/thinning.py:127: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
       "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n"
      ]
     }
@@ -775,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "f20971b1-d344-4696-9eac-93e2fe5bcb8a",
    "metadata": {},
    "outputs": [],
@@ -800,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "ae828def-ffd8-4cd8-9182-4bb6bf4af4d6",
    "metadata": {},
    "outputs": [],
@@ -811,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "a00af41e-77f1-4a36-b07a-efc7cd08c3b8",
    "metadata": {},
    "outputs": [
@@ -827,7 +818,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "3e8c2259-97d5-4e13-b2bb-7e5787d25926",
    "metadata": {},
    "outputs": [
@@ -888,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "682fca9b-b1a4-4e3a-9d50-34d1302aaa56",
    "metadata": {},
    "outputs": [],
@@ -904,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "db4f817d-481e-48f8-b00f-b122035206c1",
    "metadata": {},
    "outputs": [
@@ -936,7 +927,7 @@
     "    ax.set_xlabel('$x_1$');\n",
     "    ax.set_ylabel('$x_2$');\n",
     "\n",
-    "fig.savefig('../report/figures/gaussian-mixture-thinned-20.pdf');"
+    "fig.savefig(FIGURES_PATH / 'gaussian-mixture-thinned-20.pdf');"
    ]
   },
   {
@@ -957,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "4d98f84b-5dec-45ea-8748-0de93b5f7638",
    "metadata": {},
    "outputs": [
@@ -973,7 +964,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "c4f99a59-c696-4b58-828b-e8dff1cabd4b",
    "metadata": {},
    "outputs": [],
@@ -1002,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "33005d58-1cc8-4b71-85c0-a40bf4a3a738",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1009,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "32a0af6c-ce05-4bd2-84f3-3243bc0696ed",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "c3a1d95e-c559-42ab-9795-20f7b9d4aca9",
    "metadata": {},
    "outputs": [],
@@ -1061,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "76116ae5-ef5a-4fce-873d-425fe1728212",
    "metadata": {},
    "outputs": [
@@ -1069,8 +1060,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28.9 s, sys: 3.44 s, total: 32.3 s\n",
-      "Wall time: 32.3 s\n"
+      "CPU times: user 29.1 s, sys: 3.42 s, total: 32.5 s\n",
+      "Wall time: 32.5 s\n"
      ]
     }
    ],
@@ -1084,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "2b4e6243-c593-4848-bb89-cd36a9f7dabc",
    "metadata": {},
    "outputs": [
@@ -1092,8 +1083,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 715 ms, sys: 3.98 ms, total: 719 ms\n",
-      "Wall time: 719 ms\n"
+      "CPU times: user 734 ms, sys: 142 μs, total: 735 ms\n",
+      "Wall time: 736 ms\n"
      ]
     }
    ],
@@ -1104,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "id": "6c0a1481-11c7-4ead-ac1a-6f8c8e30ee36",
    "metadata": {},
    "outputs": [
@@ -1112,8 +1103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 44s, sys: 32.7 ms, total: 1min 44s\n",
-      "Wall time: 1min 44s\n"
+      "CPU times: user 1min 47s, sys: 52.1 ms, total: 1min 47s\n",
+      "Wall time: 1min 48s\n"
      ]
     }
    ],
@@ -1126,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "id": "54d5bd6a-9da6-4d1c-9b7f-ca974f53ddea",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1153,7 @@
     "axs[1].legend();\n",
     "axs[1].set_title('Kernel Stein discrepancy');\n",
     "\n",
-    "fig.savefig(figures_path / 'gaussian-mixture-comparison.pdf');"
+    "fig.savefig(FIGURES_PATH / 'gaussian-mixture-comparison.pdf');"
    ]
   },
   {
@@ -1183,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "id": "a2d7ae1e-29a2-4097-a1aa-23330dc62b9a",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "id": "cb65c087-7f4d-45bd-956c-024404efe3f5",
    "metadata": {},
    "outputs": [
@@ -1265,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "id": "a2d651cb-f760-4cfb-b313-3f93bbc4ec17",
    "metadata": {},
    "outputs": [],
@@ -1277,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "id": "a6539b53-cf47-491e-afdb-bd25ef1d32d9",
    "metadata": {},
    "outputs": [],
@@ -1288,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "3fc1f4cd-5266-4bf3-a486-f8f7c8d4567e",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "262f29ab-3365-407a-abcf-cc02189e7c1d",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "id": "a5fb1440-a7bd-4e55-93d8-abbcd58aa403",
    "metadata": {},
    "outputs": [
@@ -1405,12 +1396,12 @@
     "axs[1].set_ylabel('$x_2$');\n",
     "fig.colorbar(scatter, ax=axs[1]);\n",
     "\n",
-    "fig.savefig(figures_path / 'gaussian-mixture-laplace-proxy.pdf');"
+    "fig.savefig(FIGURES_PATH / 'gaussian-mixture-laplace-proxy.pdf');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "id": "0b1ff979-25b4-4171-bf8a-4be3234812a4",
    "metadata": {},
    "outputs": [],
@@ -1422,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "id": "5f39c863-3835-4013-83dc-bbc03e1bda5b",
    "metadata": {},
    "outputs": [
@@ -1444,12 +1435,12 @@
     "ax.set_xlabel('$k_Q(x_i, x_j)$');\n",
     "ax.set_ylabel('Count');\n",
     "\n",
-    "fig.savefig(figures_path / 'gaussian-mixture-kQ-hist.pdf');"
+    "fig.savefig(FIGURES_PATH / 'gaussian-mixture-kQ-hist.pdf');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "id": "f6f9adf5-426a-4f7b-a1d1-611694365d42",
    "metadata": {},
    "outputs": [
@@ -1459,7 +1450,7 @@
        "-22.843525681148968"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "id": "73a8f907-6b77-43eb-b850-a47b74d8d9ce",
    "metadata": {},
    "outputs": [
@@ -1480,7 +1471,7 @@
        "356.09025856685986"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 63,
    "id": "b1189ae3-721e-445e-a62e-2a5dfb6d1fd1",
    "metadata": {},
    "outputs": [
@@ -1501,7 +1492,7 @@
        "6.305116760146989e-16"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
