Evaluate simple Gaussian for gradient-free thinning

--- a/code/notebooks/lotka_volterra/Sensitivity_analysis.ipynb
+++ b/code/notebooks/lotka_volterra/Sensitivity_analysis.ipynb
@@ -42,7 +42,7 @@
     "import lotka_volterra\n",
     "import utils.caching\n",
     "from utils.caching import cached, cached_batch, subscriptable\n",
-    "from utils.parallel import apply_along_axis_parallel, get_map_parallel\n",
+    "from utils.parallel import apply_along_axis_parallel, get_map_parallel, parallelise_for_unique\n",
     "from utils.paths import FIGURES_PATH, GENERATED_DATA_PATH\n",
     "from utils.plotting import centered_subplots, highlight_points, plot_paths, plot_sample_thinned, plot_traces"
    ]
@@ -1118,29 +1118,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01a315e2-d16e-4466-9da8-581b943f76ec",
-   "metadata": {},
-   "source": [
-    "A helper function to calculate gradients using unique values only:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "144d3ec6-13fb-4dc2-9e44-4d4254989aea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parallelise_for_unique(func, sample, row_chunk_size=200):\n",
-    "    \"\"\"Calculate gradients for samples\"\"\"\n",
-    "    # we can save time by calculating gradients for unique samples only\n",
-    "    unique_samples, inverse_index = np.unique(sample, axis=0, return_inverse=True)\n",
-    "    res = apply_along_axis_parallel(func, 1, unique_samples, row_chunk_size, client)\n",
-    "    return res[inverse_index]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "93f10757-fa26-4c63-85ee-5ce85c1eb1d0",
    "metadata": {},
    "source": [
@@ -1157,7 +1134,7 @@
     "@subscriptable(n=len(lotka_volterra.theta_inits))\n",
     "@cached(recalculate=recalculate, persist=True)\n",
     "def rw_grads(i: int) -> np.ndarray:\n",
-    "    return parallelise_for_unique(grad_log_posterior, np.exp(rw_samples[i]))"
+    "    return parallelise_for_unique(grad_log_posterior, np.exp(rw_samples[i]), client)"
    ]
   },
   {
@@ -1178,7 +1155,7 @@
     "@subscriptable(n=len(lotka_volterra.theta_inits))\n",
     "@cached(recalculate=recalculate, persist=True)\n",
     "def hmc_grads(i: int) -> np.ndarray:\n",
-    "    return parallelise_for_unique(grad_log_posterior, np.exp(hmc_samples[i]))"
+    "    return parallelise_for_unique(grad_log_posterior, np.exp(hmc_samples[i]), client)"
    ]
   }
  ],
