Attempt adjusting covariance in simple Gaussian approach for Lotka-Volterra

--- a/code/notebooks/lotka_volterra/Gradient_free.ipynb
+++ b/code/notebooks/lotka_volterra/Gradient_free.ipynb
@@ -437,6 +437,14 @@
      "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/artem/Study/KCL/ST50 Project/code/.venv/lib/python3.12/site-packages/distributed/system_monitor.py:201: UserWarning: timed out waiting on channel\n",
+      "  self._gilknocker.reset_contention_metric()\n"
+     ]
     }
    ],
    "source": [
